[#1] Update the README